==> Firmament-Autopilot/FMT-Firmware/target/pixhawk/fmu-v2/drivers/drv_usart.c <==
#include "drv_usart.h"
#include "hal/serial/serial.h"
#include <firmament.h>
#define UART_ENABLE_IRQ(n)  NVIC_EnableIRQ((n))
#define UART_DISABLE_IRQ(n) NVIC_DisableIRQ((n))
#define USING_UART2
#define USING_UART3
#define USING_UART4
#define USING_UART6
#define USING_UART7
#define USING_UART8
#define UART1_GPIO_TX       GPIO_Pin_9
#define UART1_TX_PIN_SOURCE GPIO_PinSource9
#define UART1_GPIO_RX       GPIO_Pin_10
#define UART1_RX_PIN_SOURCE GPIO_PinSource10
#define UART1_GPIO          GPIOA
#define UART1_GPIO_RCC      RCC_AHB1Periph_GPIOA
#define RCC_APBPeriph_UART1 RCC_APB2Periph_USART1
#define UART2_GPIO_CTS       GPIO_Pin_3
#define UART2_CTS_PIN_SOURCE GPIO_PinSource3
#define UART2_GPIO_RTS       GPIO_Pin_4
#define UART2_RTS_PIN_SOURCE GPIO_PinSource4
#define UART2_GPIO_TX        GPIO_Pin_5
#define UART2_TX_PIN_SOURCE  GPIO_PinSource5
#define UART2_GPIO_RX        GPIO_Pin_6
#define UART2_RX_PIN_SOURCE  GPIO_PinSource6
#define UART2_GPIO           GPIOD
#define UART2_GPIO_RCC       RCC_AHB1Periph_GPIOD
#define RCC_APBPeriph_UART2  RCC_APB1Periph_USART2
#define UART3_GPIO_CTS       GPIO_Pin_11
#define UART3_CTS_PIN_SOURCE GPIO_PinSource11
#define UART3_GPIO_RTS       GPIO_Pin_12
#define UART3_RTS_PIN_SOURCE GPIO_PinSource12
#define UART3_GPIO_TX        GPIO_Pin_8
#define UART3_TX_PIN_SOURCE  GPIO_PinSource8
#define UART3_GPIO_RX        GPIO_Pin_9
#define UART3_RX_PIN_SOURCE  GPIO_PinSource9
#define UART3_GPIO           GPIOD
#define UART3_GPIO_RCC       RCC_AHB1Periph_GPIOD

static void uart_isr(struct serial_device* serial)
{
    struct stm32_uart* uart = (struct stm32_uart*)serial->parent.user_data;

    if (USART_GetITStatus(uart->uart_device, USART_IT_RXNE) != RESET) {
        hal_serial_isr(serial, SERIAL_EVENT_RX_IND);
        /* clear interrupt */
        USART_ClearITPendingBit(uart->uart_device, USART_IT_RXNE);
    }

    if (USART_GetITStatus(uart->uart_device, USART_IT_IDLE) != RESET) {
        if ((uart->uart_device->CR3 & USART_CR3_DMAR)) {
            dma_uart_rx_idle_isr(serial);
        }
        /* read a data for clear receive idle interrupt flag */
        USART_ReceiveData(uart->uart_device);
    }

    if (USART_GetITStatus(uart->uart_device, USART_IT_TC) != RESET) {
        /* clear interrupt */
        USART_ClearITPendingBit(uart->uart_device, USART_IT_TC);
    }

    if (USART_GetFlagStatus(uart->uart_device, USART_FLAG_ORE) == SET) {
        usart_getc(serial);
    }
}

static void RCC_Configuration(void)
{
#ifdef USING_UART1
    /* Enable UART1 GPIO clocks */
    RCC_AHB1PeriphClockCmd(UART1_GPIO_RCC, ENABLE);
    /* Enable UART1 clock */
    RCC_APB2PeriphClockCmd(RCC_APBPeriph_UART1, ENABLE);
#endif /* USING_UART1 */

#ifdef USING_UART2
    /* Enable UART2 GPIO clocks */
    RCC_AHB1PeriphClockCmd(UART2_GPIO_RCC, ENABLE);
    /* Enable UART2 clock */
    RCC_APB1PeriphClockCmd(RCC_APBPeriph_UART2, ENABLE);
#endif /* USING_UART1 */

#ifdef USING_UART3
    /* Enable UART3 GPIO clocks */
    RCC_AHB1PeriphClockCmd(UART3_GPIO_RCC, ENABLE);
    /* Enable UART3 clock */
    RCC_APB1PeriphClockCmd(RCC_APBPeriph_UART3, ENABLE);
#endif /* USING_UART3 */

#ifdef USING_UART4
    /* Enable UART4 GPIO clocks */
    RCC_AHB1PeriphClockCmd(UART4_GPIO_RCC, ENABLE);
    /* Enable UART4 clock */
    RCC_APB1PeriphClockCmd(RCC_APBPeriph_UART4, ENABLE);
#endif /* USING_UART4 */

#ifdef USING_UART6
    /* Enable UART6 GPIO clocks */
    RCC_AHB1PeriphClockCmd(UART6_GPIO_RCC, ENABLE);
    /* Enable UART6 clock */
    RCC_APB2PeriphClockCmd(RCC_APBPeriph_UART6, ENABLE);
#endif /* USING_UART6 */

#ifdef USING_UART7
    /* Enable UART7 GPIO clocks */
    RCC_AHB1PeriphClockCmd(UART7_GPIO_RCC, ENABLE);
    /* Enable UART7 clock */
    RCC_APB1PeriphClockCmd(RCC_APBPeriph_UART7, ENABLE);
#endif /* USING_UART7 */

#ifdef USING_UART8
    /* Enable UART8 GPIO clocks */
    RCC_AHB1PeriphClockCmd(UART8_GPIO_RCC, ENABLE);
    /* Enable UART8 clock */
    RCC_APB1PeriphClockCmd(RCC_APBPeriph_UART8, ENABLE);
#endif /* USING_UART8 */

    /* DMA clock enable */
    RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_DMA1, ENABLE);
    RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_DMA2, ENABLE);
}

static void GPIO_Configuration(void)
{
    GPIO_InitTypeDef GPIO_InitStructure;

    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;
    GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
    GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_UP;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_2MHz;

#ifdef USING_UART1
    /* Configure USART1 Rx/tx PIN */
    GPIO_InitStructure.GPIO_Pin = UART1_GPIO_RX | UART1_GPIO_TX;
    GPIO_Init(UART1_GPIO, &GPIO_InitStructure);

    /* Connect alternate function */
    GPIO_PinAFConfig(UART1_GPIO, UART1_TX_PIN_SOURCE, GPIO_AF_USART1);
    GPIO_PinAFConfig(UART1_GPIO, UART1_RX_PIN_SOURCE, GPIO_AF_USART1);
#endif /* USING_UART1 */

#ifdef USING_UART2
    /* Configure USART2 Rx/tx PIN */
    GPIO_InitStructure.GPIO_Pin = UART2_GPIO_RX | UART2_GPIO_TX;
    GPIO_Init(UART2_GPIO, &GPIO_InitStructure);

    /* Connect alternate function */
    GPIO_PinAFConfig(UART2_GPIO, UART2_TX_PIN_SOURCE, GPIO_AF_USART2);
    GPIO_PinAFConfig(UART2_GPIO, UART2_RX_PIN_SOURCE, GPIO_AF_USART2);
#endif /* USING_UART2 */

#ifdef USING_UART3
    /* Configure USART3 Rx/tx PIN */
    GPIO_InitStructure.GPIO_Pin = UART3_GPIO_TX | UART3_GPIO_RX;
    GPIO_Init(UART3_GPIO, &GPIO_InitStructure);

    /* Connect alternate function */
    GPIO_PinAFConfig(UART3_GPIO, UART3_TX_PIN_SOURCE, GPIO_AF_USART3);
    GPIO_PinAFConfig(UART3_GPIO, UART3_RX_PIN_SOURCE, GPIO_AF_USART3);
#endif /* USING_UART3 */

#ifdef USING_UART4
    /* Configure USART4 Rx/tx PIN */
    GPIO_InitStructure.GPIO_Pin = UART4_GPIO_TX | UART4_GPIO_RX;
    GPIO_Init(UART4_GPIO, &GPIO_InitStructure);

    /* Connect alternate function */
    GPIO_PinAFConfig(UART4_GPIO, UART4_TX_PIN_SOURCE, GPIO_AF_UART4);
    GPIO_PinAFConfig(UART4_GPIO, UART4_RX_PIN_SOURCE, GPIO_AF_UART4);
#endif /* USING_UART4 */

#ifdef USING_UART6
    /* Configure USART6 Rx/tx PIN */
    GPIO_InitStructure.GPIO_Pin = UART6_GPIO_RX | UART6_GPIO_TX;
    GPIO_Init(UART6_GPIO, &GPIO_InitStructure);

    /* Connect alternate function */
    GPIO_PinAFConfig(UART6_GPIO, UART6_TX_PIN_SOURCE, GPIO_AF_USART6);
    GPIO_PinAFConfig(UART6_GPIO, UART6_RX_PIN_SOURCE, GPIO_AF_USART6);
#endif /* USING_UART6 */

#ifdef USING_UART7
    /* Configure USART7 Rx/tx PIN */
    GPIO_InitStructure.GPIO_Pin = UART7_GPIO_RX | UART7_GPIO_TX;
    GPIO_Init(UART7_GPIO, &GPIO_InitStructure);

    /* Connect alternate function */
    GPIO_PinAFConfig(UART7_GPIO, UART7_TX_PIN_SOURCE, GPIO_AF_UART7);
    GPIO_PinAFConfig(UART7_GPIO, UART7_RX_PIN_SOURCE, GPIO_AF_UART7);
#endif /* USING_UART7 */

#ifdef USING_UART8
    /* Configure USART8 Rx/tx PIN */
    GPIO_InitStructure.GPIO_Pin = UART8_GPIO_RX | UART8_GPIO_TX;
    GPIO_Init(UART8_GPIO, &GPIO_InitStructure);

    /* Connect alternate function */
    GPIO_PinAFConfig(UART8_GPIO, UART8_TX_PIN_SOURCE, GPIO_AF_UART8);
    GPIO_PinAFConfig(UART8_GPIO, UART8_RX_PIN_SOURCE, GPIO_AF_UART8);
#endif /* USING_UART8 */
}

static void NVIC_Configuration(struct stm32_uart* uart)
{
    NVIC_InitTypeDef NVIC_InitStructure;

    /* Enable the USART1 Interrupt */
    NVIC_InitStructure.NVIC_IRQChannel = uart->irq;
    NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 0;
    NVIC_InitStructure.NVIC_IRQChannelSubPriority = 1;
    NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
    NVIC_Init(&NVIC_InitStructure);
}

static void _close_usart(struct serial_device* serial)
{
    struct stm32_uart* uart = (struct stm32_uart*)serial->parent.user_data;

    if (serial->parent.open_flag & RT_DEVICE_FLAG_INT_RX) {
        /* disable rx irq */
        //UART_DISABLE_IRQ(uart->irq);	/* we don't disable rx irq, since dma rx need it */
        /* disable interrupt */
        USART_ITConfig(uart->uart_device, USART_IT_RXNE, DISABLE);
    }

    if (serial->parent.open_flag & RT_DEVICE_FLAG_DMA_RX) {
        DMA_ClearFlag(uart->dma.rx_stream, uart->dma.rx_flag);
        DMA_ITConfig(uart->dma.rx_stream, DMA_IT_TC, DISABLE);
        USART_ITConfig(uart->uart_device, USART_IT_IDLE, DISABLE);
        USART_DMACmd(uart->uart_device, USART_DMAReq_Rx, DISABLE);
        DMA_Cmd(uart->dma.rx_stream, DISABLE);
    }

    if (serial->parent.open_flag & RT_DEVICE_FLAG_DMA_TX) {
        DMA_ClearFlag(uart->dma.tx_stream, uart->dma.tx_flag);
        DMA_ITConfig(uart->dma.tx_stream, DMA_IT_TC, DISABLE);
        USART_DMACmd(uart->uart_device, USART_DMAReq_Tx, DISABLE);
        DMA_Cmd(uart->dma.tx_stream, DISABLE);
    }

    /* reset last recv index */
    uart->dma.last_recv_index = 0;
}

static rt_err_t usart_configure(struct serial_device* serial, struct serial_configure* cfg)
{
    struct stm32_uart* uart;
    USART_InitTypeDef USART_InitStructure;

    RT_ASSERT(serial != RT_NULL);
    RT_ASSERT(cfg != RT_NULL);

    uart = (struct stm32_uart*)serial->parent.user_data;

    USART_InitStructure.USART_BaudRate = cfg->baud_rate;

    if (cfg->data_bits == DATA_BITS_8) {
        USART_InitStructure.USART_WordLength = USART_WordLength_8b;
    } else if (cfg->data_bits == DATA_BITS_9) {
        USART_InitStructure.USART_WordLength = USART_WordLength_9b;
    }

    if (cfg->stop_bits == STOP_BITS_1) {
        USART_InitStructure.USART_StopBits = USART_StopBits_1;
    } else if (cfg->stop_bits == STOP_BITS_2) {
        USART_InitStructure.USART_StopBits = USART_StopBits_2;
    }

    if (cfg->parity == PARITY_NONE) {
        USART_InitStructure.USART_Parity = USART_Parity_No;
    } else if (cfg->parity == PARITY_ODD) {
        USART_InitStructure.USART_Parity = USART_Parity_Odd;
    } else if (cfg->parity == PARITY_EVEN) {
        USART_InitStructure.USART_Parity = USART_Parity_Even;
    }

    USART_InitStructure.USART_HardwareFlowControl = USART_HardwareFlowControl_None;
    USART_InitStructure.USART_Mode = USART_Mode_Rx | USART_Mode_Tx;

    /* Disable USART before configuration */
    USART_Cmd(uart->uart_device, DISABLE);
    USART_Init(uart->uart_device, &USART_InitStructure);
    /* Enable USART */
    USART_Cmd(uart->uart_device, ENABLE);

    return RT_EOK;
}
