==> Firmament-Autopilot/FMT-Firmware/target/infineon/edge-e83/drivers/drv_usart.c <==
#include <firmament.h>
#include "drv_usart.h"
#include "hal/serial/serial.h"
#include "stm32h7xx_ll_usart.h"
#define UART_ENABLE_IRQ(n)  NVIC_EnableIRQ((n))
#define UART_DISABLE_IRQ(n) NVIC_DisableIRQ((n))
#define USING_UART1

static void uart_isr(struct serial_device* serial)
{
    struct stm32_uart* uart = (struct stm32_uart*)serial->parent.user_data;

    if (LL_USART_IsActiveFlag_RXNE(uart->uart_device) && LL_USART_IsEnabledIT_RXNE(uart->uart_device)) {
        /* high-level ISR routine */
        hal_serial_isr(serial, SERIAL_EVENT_RX_IND);
        /* the RXNE flag is cleared by reading the USART_RDR register */
    }

    // if (LL_USART_IsActiveFlag_IDLE(uart->uart_device) && LL_USART_IsEnabledIT_IDLE(uart->uart_device)) {
    //     if (LL_USART_IsEnabledDMAReq_RX(uart->uart_device)) {
    //         dma_uart_rx_idle_isr(serial);
    //     }
    //     /* clear interrupt flag */
    //     LL_USART_ClearFlag_IDLE(uart->uart_device);
    // }

    if (LL_USART_IsActiveFlag_TC(uart->uart_device) && LL_USART_IsEnabledIT_TC(uart->uart_device)) {
        // TODO: this can be used for TX_INT mode?
        /* high-level ISR routine */
        // hal_serial_isr(serial, SERIAL_EVENT_TX_DONE);

        /* clear interrupt */
        LL_USART_ClearFlag_TC(uart->uart_device);
    }

    if (LL_USART_IsActiveFlag_ORE(uart->uart_device) != RESET) {
        usart_getc(serial);
        LL_USART_ClearFlag_ORE(uart->uart_device);
    }

    if (LL_USART_IsActiveFlag_FE(uart->uart_device) != RESET) {
        LL_USART_ClearFlag_FE(uart->uart_device);
    }

    if (LL_USART_IsActiveFlag_NE(uart->uart_device) != RESET) {
        LL_USART_ClearFlag_NE(uart->uart_device);
    }
}

static void RCC_Configuration(void)
{
    LL_RCC_SetUSARTClockSource(LL_RCC_USART234578_CLKSOURCE_PCLK1);
    LL_RCC_SetUSARTClockSource(LL_RCC_USART16_CLKSOURCE_PCLK2);

#ifdef USING_UART1
    LL_APB2_GRP1_EnableClock(LL_APB2_GRP1_PERIPH_USART1);
    LL_AHB4_GRP1_EnableClock(LL_AHB4_GRP1_PERIPH_GPIOB);
#endif

    /* DMA controller clock enable */
    LL_AHB1_GRP1_EnableClock(LL_AHB1_GRP1_PERIPH_DMA1);
    LL_AHB1_GRP1_EnableClock(LL_AHB1_GRP1_PERIPH_DMA2);
}

static void GPIO_Configuration(void)
{
    LL_GPIO_InitTypeDef GPIO_InitStruct = { 0 };

#ifdef USING_UART1
    /**USART1 GPIO Configuration
    PB14   ------> USART1_TX
    PB15   ------> USART1_RX
    */
    GPIO_InitStruct.Pin = LL_GPIO_PIN_14 | LL_GPIO_PIN_15;
    GPIO_InitStruct.Mode = LL_GPIO_MODE_ALTERNATE;
    GPIO_InitStruct.Speed = LL_GPIO_SPEED_FREQ_HIGH;
    GPIO_InitStruct.OutputType = LL_GPIO_OUTPUT_PUSHPULL;
    GPIO_InitStruct.Pull = LL_GPIO_PULL_NO;
    GPIO_InitStruct.Alternate = LL_GPIO_AF_4;
    LL_GPIO_Init(GPIOB, &GPIO_InitStruct);
#endif /* USING_UART1 */
}

static void NVIC_Configuration(struct stm32_uart* uart)
{
    // TODO: configure the PreemptionPriority and SubPriority

    /* disable usart device by default, incase that enter irq before usart has been configured */
    LL_USART_Disable(uart->uart_device);

    /* enable the usart interrupt */
    NVIC_SetPriority(uart->irq, NVIC_EncodePriority(NVIC_GetPriorityGrouping(), 1, 0));
    NVIC_EnableIRQ(uart->irq);

    /* enable the dma interrupt */
    if (uart->dma.rx_irq > 0) {
        NVIC_SetPriority(uart->dma.rx_irq, NVIC_EncodePriority(NVIC_GetPriorityGrouping(), 2, 0));
        NVIC_EnableIRQ(uart->dma.rx_irq);
    }

    if (uart->dma.tx_irq > 0) {
        NVIC_SetPriority(uart->dma.tx_irq, NVIC_EncodePriority(NVIC_GetPriorityGrouping(), 2, 0));
        NVIC_EnableIRQ(uart->dma.tx_irq);
    }
}

static void _close_usart(struct serial_device* serial)
{
    struct stm32_uart* uart = (struct stm32_uart*)serial->parent.user_data;

    if (serial->parent.open_flag & RT_DEVICE_FLAG_INT_RX) {
        /* disable int rx irq */
        LL_USART_DisableIT_RXNE(uart->uart_device);
    }

    if (serial->parent.open_flag & RT_DEVICE_FLAG_DMA_RX) {
        /* disable dma rx irq and disable rx dma */
        LL_DMA_DisableIT_TC(uart->dma.dma_device, uart->dma.rx_stream);
        LL_USART_DisableIT_IDLE(uart->uart_device);
        LL_DMA_DisableStream(uart->dma.dma_device, uart->dma.rx_stream);
        LL_USART_DisableDMAReq_RX(uart->uart_device);
    }

    if (serial->parent.open_flag & RT_DEVICE_FLAG_DMA_TX) {
        /* disable dma tx irq and disable tx dma */
        LL_DMA_DisableIT_TC(uart->dma.dma_device, uart->dma.tx_stream);
        LL_DMA_DisableStream(uart->dma.dma_device, uart->dma.tx_stream);
        LL_USART_DisableDMAReq_TX(uart->uart_device);
    }
    /* reset last recv index */
    uart->dma.last_recv_index = 0;
}

static rt_err_t usart_configure(struct serial_device* serial, struct serial_configure* cfg)
{
    struct stm32_uart* uart;
    LL_USART_InitTypeDef USART_InitStructure = { 0 };

    RT_ASSERT(serial != RT_NULL);
    RT_ASSERT(cfg != RT_NULL);

    uart = (struct stm32_uart*)serial->parent.user_data;

    USART_InitStructure.BaudRate = cfg->baud_rate;

    if (cfg->data_bits == DATA_BITS_8) {
        USART_InitStructure.DataWidth = LL_USART_DATAWIDTH_8B;
    } else if (cfg->data_bits == DATA_BITS_9) {
        USART_InitStructure.DataWidth = LL_USART_DATAWIDTH_9B;
    }

    if (cfg->stop_bits == STOP_BITS_1) {
        USART_InitStructure.StopBits = LL_USART_STOPBITS_1;
    } else if (cfg->stop_bits == STOP_BITS_2) {
        USART_InitStructure.StopBits = LL_USART_STOPBITS_2;
    }

    if (cfg->parity == PARITY_NONE) {
        USART_InitStructure.Parity = LL_USART_PARITY_NONE;
    } else if (cfg->parity == PARITY_ODD) {
        USART_InitStructure.Parity = LL_USART_PARITY_ODD;
    } else if (cfg->parity == PARITY_EVEN) {
        USART_InitStructure.Parity = LL_USART_PARITY_EVEN;
    }
    // TODO: Add hw flow control
    USART_InitStructure.HardwareFlowControl = LL_USART_HWCONTROL_NONE;
    USART_InitStructure.TransferDirection = LL_USART_DIRECTION_TX_RX;
    USART_InitStructure.OverSampling = LL_USART_OVERSAMPLING_16;

    /* USART need be disabled first in order to configure it */
    LL_USART_Disable(uart->uart_device);
    LL_USART_Init(uart->uart_device, &USART_InitStructure);
    LL_USART_ConfigAsyncMode(uart->uart_device);
    LL_USART_DisableIT_ERROR(uart->uart_device); /* Disable error interrupt */
    LL_USART_Enable(uart->uart_device);

    /* Polling USART initialisation */
    while ((!(LL_USART_IsActiveFlag_TEACK(uart->uart_device))) || (!(LL_USART_IsActiveFlag_REACK(uart->uart_device)))) {
    }

    return RT_EOK;
}
